--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     height: 100%;
     width: 100%;
     /* background-color: red; */
-    background-image: url("https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url(/startup-img.jpg);
     background-size: cover;
     opacity: 0.8;
 }
